--- a/antigos/site/Cadastro/estilo.css
+++ b/antigos/site/Cadastro/estilo.css
@@ -1,4 +1,4 @@
-
+/*
 input[type=text], select {
     width: 30%;
     padding: 12px 20px;
@@ -29,4 +29,4 @@ input[type=submit]:hover {
 
 	font-size: 18px;
 
-}
+}*/
