--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,16 +99,30 @@ textarea
     cursor: pointer;
 
 }
-.buton
+.mizera
 {
-    width: 10%;
-    background-color: #4CAF50;
+    width: 50%;
+    background-color: #000000;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    text-align: center;
+}
+
+.buton
+{
+    width: 35%;
+    background-color: #000000;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
 }
 .pesq
 {
@@ -303,7 +317,7 @@ span.psw
 }
 input[type=text], select 
 {
-    width: 40%;
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -313,13 +327,24 @@ input[type=text], select
 }
 input[type=password], select 
 {
-    width: 20%;
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+}
+input[type=email], select
+{
+     width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}  
 }
 .nav-custom-style{
 
