--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,6 +99,20 @@ textarea
     cursor: pointer;
 
 }
+
+.tqdc
+{
+    width: 100%;
+    background-color: #000000;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+}
+
 .mizera
 {
     width: 50%;
